--- a/Views/LogInWindow.xaml
+++ b/Views/LogInWindow.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="CarWorkshop.Views.LogInView"
+﻿<Window x:Class="CarWorkshop.Views.LogInWindow"
+        Name="LogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarWorkshop.Views"
         mc:Ignorable="d"
-        Height="450" Width="800"
-        FontSize="20">
+        Title="LogInWindow" Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -29,7 +30,8 @@
 
             <Button Content="Login"
                     Margin="30"
-                    Command="{Binding Path=CheckLogInCommand}"/>
+                    Command="{Binding Path=CheckLogInCommand}"
+                    CommandParameter="{Binding ElementName=LogWindow}"/>
         </StackPanel>
     </Grid>
-</UserControl>
+</Window>
