Navigation With Param
Dodanie nawigacji z parametrem

--- a/App.xaml
+++ b/App.xaml
@@ -17,6 +17,10 @@
         <DataTemplate DataType="{x:Type vms:AddClientViewModel}">
             <view:AddClientView/>
         </DataTemplate>
-        
+
+        <DataTemplate DataType="{x:Type vms:ClientDetailsViewModel}">
+            <view:ClientDetailsView/>
+        </DataTemplate>
+
     </Application.Resources>
 </Application>
