--- a/Views/ClientsListView.xaml
+++ b/Views/ClientsListView.xaml
@@ -37,7 +37,16 @@
                     <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FullName}"/>
                     <GridViewColumn Header="Adress" DisplayMemberBinding="{Binding Adress}"/>
                     <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}"/>
-                    <GridViewColumn Header="Edit">
+                    <GridViewColumn Header="Details">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Details" 
+                                        Command="{Binding Path=DataContext.DetailsClientCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding Id}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Delete">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Content="Delete" 
