--- a/Views/CarDetailsView.xaml
+++ b/Views/CarDetailsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CarWorkshop.Views.ClientDetailsView"
+﻿<UserControl x:Class="CarWorkshop.Views.CarDetailsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,9 +17,9 @@
             <ColumnDefinition Width="50*"/>
             <ColumnDefinition Width="50*"/>
         </Grid.ColumnDefinitions>
-        
-        
-        <TextBlock Text="{Binding FullName}" 
+
+
+        <TextBlock Text="{Binding Name}" 
                    Grid.Row="0" Grid.Column="0"
                    TextAlignment="Left"
                    FontSize="30"
@@ -29,82 +29,66 @@
         <StackPanel Orientation="Horizontal"
                     Grid.Row="0" Grid.Column="1"
                     HorizontalAlignment="Right">
-            <Button Content="Add Car"
+            <Button Content="Add Repair"
                 Grid.Row="0" Grid.Column="2"
                     Margin="7"
                     Padding="10"
-                Command="{Binding Path=AddNewCarCommand}"/>
+                Command="{Binding Path=AddNewRepairCommand}"/>
         </StackPanel>
 
         <StackPanel 
             Grid.Row="1" Grid.Column="0"
             Margin="10">
 
-            <TextBlock Text="Contact:" 
+            <TextBlock Text="Vin:" 
                    TextAlignment="Left"
                    FontSize="14"
                    FontWeight="Bold"/>
 
-            <TextBlock Text="{Binding ContactNumber}" 
+            <TextBlock Text="{Binding VIN}" 
                    TextAlignment="Left"
                    FontSize="14"
                    Margin="5 0 0 0"/>
 
-            <TextBlock Text="Adress:" 
+            <TextBlock Text="Plate Numer:" 
                    TextAlignment="Left"
                    FontSize="14"
                    FontWeight="Bold"/>
 
-            <TextBlock Text="{Binding Adress}" 
+            <TextBlock Text="{Binding PlateNumer}" 
                    TextAlignment="Left"
                    FontSize="14"
                    Margin="5 0 0 0"/>
 
-            <TextBlock Text="{Binding City}" 
+            <TextBlock Text="Year of Production:" 
                    TextAlignment="Left"
                    FontSize="14"
-                   Margin="5 0 0 0"/>
+                   FontWeight="Bold"/>
 
-            <TextBlock Text="{Binding PostalCode}" 
+            <TextBlock Text="{Binding YearOfProduce}" 
                    TextAlignment="Left"
                    FontSize="14"
                    Margin="5 0 0 0"/>
         </StackPanel>
 
-        <StackPanel 
-            Grid.Row="1" Grid.Column="1"
-            Margin="10">
-
-            <TextBlock Text="Pesel:" 
-                   TextAlignment="Left"
-                   FontSize="14"
-                   FontWeight="Bold"/>
-
-            <TextBlock Text="{Binding Pesel}" 
-                   TextAlignment="Left"
-                   FontSize="14"
-                   Margin="5 0 0 0"/>
-
-            <TextBlock Text="NIP:" 
-                   TextAlignment="Left"
-                   FontSize="14"
-                   FontWeight="Bold"/>
-
-            <TextBlock Text="{Binding NipNumber}" 
-                   TextAlignment="Left"
-                   FontSize="14"
-                   Margin="5 0 0 0"/>
-        </StackPanel>
-
-        <ListView  ItemsSource="{Binding Cars}" 
+        <ListView  ItemsSource="{Binding Repairs}" 
                    Grid.Row="2" Grid.ColumnSpan="3"
                    Margin="10">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Plate Number" DisplayMemberBinding="{Binding PlateNumer}"/>
-                    <GridViewColumn Header="Vin Number" DisplayMemberBinding="{Binding VIN}"/>
-                    <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}"/>
-                    <GridViewColumn Header="Year" DisplayMemberBinding="{Binding YearOfProduce}"/>
+                    <GridViewColumn Header="Start Date" DisplayMemberBinding="{Binding StartDate}"/>
+                    <GridViewColumn Header="End Date" DisplayMemberBinding="{Binding EndDate}"/>
+                    <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}"/>
+                    <GridViewColumn Header="Summary Working Hours" DisplayMemberBinding="{Binding SummaryWorkingHours}"/>
+                    <GridViewColumn Header="Details">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Details" 
+                                        Command="{Binding Path=DataContext.DetailsRepairCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding Id}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
