--- a/Views/CarsListView.xaml
+++ b/Views/CarsListView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="CarWorkshop.Views.ClientsListView"
+﻿<UserControl x:Class="CarWorkshop.Views.CarsListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:CarWorkshop.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -17,32 +17,27 @@
             <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Clients" 
+        <TextBlock Text="Cars" 
                    Grid.Row="0" Grid.Column="0"
                    TextAlignment="Left"
                    FontSize="30"
                    Margin="20 10 0 0"/>
 
-        <Button Content="Add"
-                Grid.Row="0" Grid.Column="2"
-                Margin="30 10 30 0"
-                Command="{Binding Path=AddNewClientCommand}"/>
-
-        <ListView  ItemsSource="{Binding ClientsView}" 
+        <ListView  ItemsSource="{Binding CarsList}" 
                    Grid.Row="2" Grid.ColumnSpan="3"
                    Margin="10">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Pesel" DisplayMemberBinding="{Binding Pesel}"/>
-                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding FullName}"/>
-                    <GridViewColumn Header="Adress" DisplayMemberBinding="{Binding Adress}"/>
-                    <GridViewColumn Header="City" DisplayMemberBinding="{Binding City}"/>
+                    <GridViewColumn Header="Pesel" DisplayMemberBinding="{Binding VIN}"/>
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding PlateNumer}"/>
+                    <GridViewColumn Header="Adress" DisplayMemberBinding="{Binding Brand}"/>
+                    <GridViewColumn Header="City" DisplayMemberBinding="{Binding YearOfProduce}"/>
                     <GridViewColumn Header="Details">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Content="Details" 
-                                        Command="{Binding Path=DataContext.DetailsClientCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
-                                        CommandParameter="{Binding Id}"/>
+                                        Command="{Binding Path=DataContext.DetailsCarCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding VIN}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -50,8 +45,8 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Button Content="Delete" 
-                                        Command="{Binding Path=DataContext.DeleteClientCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
-                                        CommandParameter="{Binding Id}"/>
+                                        Command="{Binding Path=DataContext.DeleteCarCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding VIN}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
