--- a/Views/AddRepairView.xaml
+++ b/Views/AddRepairView.xaml
@@ -9,31 +9,27 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="1" Orientation="Vertical"
                     Margin="0 20 0 0">
 
-            <TextBlock Text="Start Date" 
+            <TextBlock Text="Start Date*" 
                        Margin="0 5 0 5"/>
             <DatePicker SelectedDate="{Binding StartDate}"/>
 
-            <TextBlock Text="End Date" 
+            <TextBlock Text="End Date*" 
                        Margin="0 5 0 5"/>
             <DatePicker SelectedDate="{Binding EndDate}"/>
 
-            <TextBlock Text="Price" 
+            <TextBlock Text="Kilometerage" 
                        Margin="0 5 0 5"/>
-            <TextBox Text="{Binding Price}"/>
+            <TextBox Text="{Binding Kilometeraga}"/>
 
-            <TextBlock Text="Working Hours" 
-                       Margin="0 5 0 5"/>
-            <TextBox Text="{Binding SummaryWorkingHours}"/>
-
-            <TextBlock Text="ClientProblemDescription" 
+            <TextBlock Text="ClientProblemDescription*" 
                        Margin="0 5 0 5"/>
 
             <TextBox Text="{Binding ProblemDescriptionByClient}"
@@ -42,9 +38,21 @@
                      VerticalScrollBarVisibility="Visible"
                      MinHeight="100"/>
 
+            <CheckBox FontSize="14"
+                Margin="5 10 0 5">Inlcude Oil Service?*</CheckBox>
+
+            <TextBlock Text="Working Hours" 
+                       Margin="0 5 0 5"/>
+            <TextBox Text="{Binding SummaryWorkingHours}"/>
+
             <Button Content="Add"
-                    Margin="30"
+                    Margin="40 30 40 0"
                     Command="{Binding Path=AddRepairCommand}"/>
+
+            <TextBlock Text="Only fields signed by '*' are obligatory" 
+                       TextAlignment="Center"
+                       FontSize="8"
+                       Margin="0 5 0 5"/>
         </StackPanel>
     </Grid>
 </UserControl>
