--- a/Views/ClientDetailsView.xaml
+++ b/Views/ClientDetailsView.xaml
@@ -10,8 +10,8 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50*"/>
@@ -40,7 +40,7 @@
             Grid.Row="1" Grid.Column="0"
             Margin="10">
 
-            <TextBlock Text="Contact:" 
+            <TextBlock Text="Contact Number:" 
                    TextAlignment="Left"
                    FontSize="14"
                    FontWeight="Bold"/>
@@ -95,19 +95,44 @@
                    FontSize="14"
                    Margin="5 0 0 0"/>
         </StackPanel>
-
-        <ListView  ItemsSource="{Binding Cars}" 
-                   Grid.Row="2" Grid.ColumnSpan="3"
+        
+        <StackPanel Grid.Row="2" Grid.ColumnSpan="3">
+            <TextBlock Text="Cars:" 
+                   Grid.Row="0" Grid.Column="0"
+                   TextAlignment="Left"
+                   FontSize="30"
+                   Margin="20 10 0 0"/>
+            
+            <ListView  ItemsSource="{Binding Cars}" 
                    Margin="10">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Plate Number" DisplayMemberBinding="{Binding PlateNumer}"/>
-                    <GridViewColumn Header="Vin Number" DisplayMemberBinding="{Binding VIN}"/>
-                    <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}"/>
-                    <GridViewColumn Header="Year" DisplayMemberBinding="{Binding YearOfProduce}"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Brand" DisplayMemberBinding="{Binding Brand}"/>
+                        <GridViewColumn Header="Model" DisplayMemberBinding="{Binding Model}"/>
+                        <GridViewColumn Header="Plate Number" DisplayMemberBinding="{Binding PlateNumer}"/>
+                        <GridViewColumn Header="Vin Number" DisplayMemberBinding="{Binding VIN}"/>
+                        <GridViewColumn Header="Year" DisplayMemberBinding="{Binding YearOfProduce}"/>
+                        <GridViewColumn Header="Details">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Content="Details" 
+                                        Command="{Binding Path=DataContext.CarDetailsCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Delete">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Content="Delete" 
+                                            Command="{Binding Path=DataContext.DeleteCarCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                            CommandParameter="{Binding}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </StackPanel>
     </Grid>
 </UserControl>
