--- a/Views/RepairDetailView.xaml
+++ b/Views/RepairDetailView.xaml
@@ -19,8 +19,8 @@
         </Grid.ColumnDefinitions>
 
 
-        <TextBlock Text="{Binding CarVin}" 
-                   Grid.Row="0" Grid.Column="0"
+        <TextBlock Text="{Binding CarName}" 
+                   Grid.Row="0" Grid.ColumnSpan="2"
                    TextAlignment="Left"
                    FontSize="30"
                    Margin="20 10 0 0"/>
@@ -54,7 +54,7 @@
                    FontSize="14"
                    FontWeight="Bold"/>
 
-            <TextBlock Text="{Binding StartDate}" 
+            <TextBlock Text="{Binding StartDate, StringFormat=dd-MM-yyyy}" 
                    TextAlignment="Left"
                    FontSize="14"
                    Margin="5 0 0 0"/>
@@ -64,7 +64,7 @@
                    FontSize="14"
                    FontWeight="Bold"/>
 
-            <TextBlock Text="{Binding EndDate}" 
+            <TextBlock Text="{Binding EndDate, StringFormat=dd-MM-yyyy}" 
                    TextAlignment="Left"
                    FontSize="14"
                    Margin="5 0 0 0"/>
@@ -112,7 +112,16 @@
                     <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
                     <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}"/>
                     <GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Quantity}"/>
-                    <GridViewColumn Header="Summary Price" DisplayMemberBinding="{Binding SummaryPrice}"/>
+                    <GridViewColumn Header="Sum Price" DisplayMemberBinding="{Binding SummaryPrice}"/>
+                    <GridViewColumn Header="Delete">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Content="Delete" 
+                                        Command="{Binding Path=DataContext.RemovePartCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}}"
+                                        CommandParameter="{Binding}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
